# cecs

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
benches/: core_benchmarks.rs  persistence_benchmarks.rs
src/: bundle.rs  commands.rs  entity_index.rs  job_system.rs  lib.rs  prelude.rs  query.rs  scheduler.rs  systems.rs  table.rs  world_tests.rs
src/query/: deleted_query.rs  filters.rs  resource_query.rs
src/systems/: test.rs
