[package]
name = "cecs"
version = "0.1.8"
edition = "2024"
description = "Entity database for the game 'Cao-Lo'"
license = "MIT"
repository = "https://github.com/caolo-game/cecs"
readme = "README.md"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel", "tracing", "serde", "clone"]
parallel = [
    "dep:lazy_static",
    "dep:parking_lot",
    "dep:crossbeam-deque",
    "dep:cache-padded",
    "dep:futures-lite",
]
clone = []
serde = ["dep:serde", "dep:serde_derive", "dep:semver"]

[dependencies]
smallvec = "1"
thiserror = "2"
tracing = { version = "0.1", optional = true }
cache-padded = { version = "1.3.0", optional = true }
crossbeam-deque = { version = "0.8.6", optional = true }
lazy_static = { version = "1.5.0", optional = true }
parking_lot = { version = "0.12.5", optional = true }
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
rustc-hash = "2.1.1"
cfg-if = "1.0.4"
futures-lite = { version = "2.6.1", optional = true }
semver = { version = "1.0.27", optional = true, features = ["serde"] }

[dev-dependencies]
bincode = "1"
serde_json = { version = "1" }
tracing-test = "0.2"
criterion = { version = "0.7", features = ["html_reports"] }
fastrand = "2.3"

[[bench]]
name = "persistence_benchmarks"
harness = false
required-features = ["serde"]
[[bench]]
name = "core_benchmarks"
harness = false
